css/styles.css
/* GENERIC CSS */
.horizontal-center{
    margin-top: 50px;
    text-align: center;
}

p, h2{
    text-align: center;
    color: black;
}

p{
    font-size: 100%;
    padding: 5px;
}

span{
    padding: 5px;
}

.glyphicon {
    font-size: 200%;
}

#profile.btn {
    border-style: outset;
    border-color: darkorange;
    border-width: 3px;
    border-radius: 100%;
}

.inline-elem{
    display: inline;
}

#headers{
    text-align: center;
    background-color: darkgray;
    color: orange;
}

.align-center-up{
    transform: translate(0, -50%);
}

.align-center-down{
    transform: translate(0, 25%);
}

@media screen and (min-width: 768px) {
    .head-text{
        font-size: 250%;
        /* position: static; */
        margin: 0;
        font-family: Arial, Helvetica, sans-serif;
        font-weight: bolder;
        line-height: 0px;
    }
}

@media screen and (max-width: 767px) {
    .head-text {
        font-size: 150%;
        /* position: static; */
        margin: 0;
        font-family: Arial, Helvetica, sans-serif;
        font-weight: bolder;
        line-height: 0px;
    }
}

@media screen and (min-width: 768px) {
    .center-head-text{
        font-size: 250%;
        /* position: static; */
        margin: 0;
        font-family: Arial, Helvetica, sans-serif;
        font-weight: bolder;
        line-height: 0px;
        transform: translateX(10%);
    }
}

@media screen and (max-width: 767px) {
    .center-head-text{
        font-size: 150%;
        /* position: static; */
        margin: 0;
        font-family: Arial, Helvetica, sans-serif;
        font-weight: bolder;
        line-height: 0px;
        transform: translateX(10%);
    }
}

@media screen and (min-width: 768px) {
    .foot-text {
        font-size: 200%;
        color: black;
        /* position: static; */
        margin-bottom: 1vw;
        font-family: Arial, Helvetica, sans-serif;
        font-weight: bolder;
        line-height: 30px;
        transform: translate(-25%, -75%);
    }
}

@media screen and (max-width: 767px) {
    .foot-text {
        font-size: 200%;
        color: black;
        /* position: static; */
        margin: auto;
        font-family: Arial, Helvetica, sans-serif;
        font-weight: bolder;
        line-height: 30px;
        transform: translate(0%, 0%);
    }
}

.noBottomMargin{
    margin-bottom: -10px;
}

.addMargin{
    margin-bottom: 10px;
    margin-top: 10px;
}

body{
    padding: 0px;
    top: 0px;
    left: 0px;
    height: 100vh;
    width: 100vw;
    background-image: url("../images/landing_page_bg.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    /* overflow: hidden; */
}

.header-footer-div{
    width: 100%;
    margin: 0;
    height: 1vh;
}

.header-div{
    background-color: rgb(255, 167, 60);
    top: 0px;
}

.footer-div{
    display: block;
    background-color: rgba(255, 255, 255, 0);
    bottom: 0px;
    padding-top: 5%
}

.page-content{
    height: 75%;
    margin-top: 2px;
    margin-bottom: 2px;
    margin-left: 1%;
    margin-right: 1%;
    width: 98%;
    overflow-y: hidden;
}

/* LIST PAGE CSS */
.section-header{
    font-size: 16px;
    background-color: rgb(216, 136, 83);
    height: 3em;
}

.section-item{
    margin-bottom: 5px;
    margin-top: 5px;
    border-radius: 8px;
    padding-right: 5%;
}

.section-heading {
    font-weight: bold;
    margin-top: 0.5em;
    padding-left: 1%;
    padding-right: 1%;
}

@media screen and (max-width: 400px){
    .section-heading {
        font-weight: bold;
        margin-top: 0.5em;
        font-size: 12px;
    }
}

.list-row {
    background-color:rgb(250, 253, 226);
    cursor: pointer;
}

/* to get rid of the extra margins inside the main list */
.row {
    margin-left: 0px;
    margin-right: 0px;
    margin-bottom: 5px;
}

.list-text {
    margin-top: 1.3em;
    color: black;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 16px;
}

@media screen and (max-width: 400px){
    .list-text {
        margin-top: 1.3em;
        color: black;
        font-family: Arial, Helvetica, sans-serif;
        font-size: 12px;
    } 
}

#listContainer{
    height: 85%;
    overflow-y: scroll;
}

.floater {
    background-color: rgba(250, 253, 226, 0.5);
    border-radius: 8px;
    padding: 5px;
    overflow-y: scroll;
    height: 90%;
}

/* CSS BY ID */
@media screen and (min-width: 768px) {
    #loginButtonDiv{
        height: 20%;
    }
}

@media screen and (max-width: 767px) {
    #loginButtonDiv{
        height: 10%;
    }
}

#firebaseui-auth-container{
    position: static;
    margin-top: 10%;
    margin-left: auto;
    margin-right: auto;
}

/*Styling for Add Assignment */
/* Style the label to display next to the inputs */
label {
padding: 12px 12px 12px 0;
display: inline-block;
}

/* Style the submit button */
input[type=submit] {
background-color: #4CAF50;
color: white;
padding: 12px 20px;
border: none;
border-radius: 4px;
cursor: pointer;
float: right;
display: none;
}

/* Style the container */
.form-container {
margin-top: 10px;
border-radius: 5px;
background-color:rgba(255, 255, 255, 0.3);
padding: 5px;
height: 70vh;
overflow-y: scroll;
}

::-webkit-scrollbar {
    -webkit-appearance: none;
    width: 7px;
}
::-webkit-scrollbar-thumb {
    border-radius: 4px;
    background-color: rgba(0, 0, 0, 0.5);
    box-shadow: 0 0 1px rgba(255,255,255,.5);
}

@media screen and (min-width: 768px) {
    textarea {
        width: 350px;
        height: 25%;
        border: 1px solid transparent;
        background-color: #f1f1f1;
        padding: 10px;
        font-size: 16px;
    }
}

@media screen and (max-width: 767px) {
    textarea {
        width: 200px;
        height: 25%;
        border: 1px solid transparent;
        background-color: #f1f1f1;
        padding: 10px;
        font-size: 16px;
    }
}

/* Aligning the text to be center for the lables of details page */
.detailLable {
    text-align: center;
}

/* Floating column for labels: 25% width */
.col-25 {
float: left;
width: 25%;
margin-top: 6px;
}

/* Floating column for inputs: 75% width */
.col-75 {
float: left;
width: 75%;
margin-top: 6px;
}

/* Clear floats after the columns */
.row:after {
content: "";
display: table;
clear: both;
}

@media screen and (max-width: 600px) {
.col-25, .col-75, input[type=submit] {
    width: 100%;
    margin-top: 0;
}
}

/* Autocomplete styling*/
* {box-sizing: border-box;}

body {
font: 16px Arial;
overflow: hidden;
}

/* aligning the check box in the details page */
input[type="radio"],
input[type="checkbox"] {
   margin: 0.9em 0 0;
   margin-top: 1px \9;
   /* margin-left: 12em; */
   line-height: normal;
   text-align: center;
}

/*the container must be positioned relative:*/
.autocomplete {
position: relative;
display: inline-block;
}

input {
border: 1px solid transparent;
background-color: #f1f1f1;
padding: 10px;
font-size: 16px;
}

@media screen and (min-width: 768px) {
    input[type=text] {
        background-color: #f1f1f1;
        width: 350px;
        overflow-x: scroll;
    }
}

@media screen and (max-width: 767px) {
    input[type=text] {
        background-color: #f1f1f1;
        width: 200px;
        overflow-x: scroll;
    }
}

.autocomplete-items {
position: absolute;
border: 1px solid #d4d4d4;
border-bottom: none;
border-top: none;
z-index: 99;
/*position the autocomplete items to be the same width as the container:*/
top: 100%;
left: 0;
right: 0;
}

@media screen and (min-width: 768px) {
    .autocomplete-items {
        width: 350px;
    }
}

@media screen and (max-width: 767px) {
    .autocomplete-items {
        width: 200px;
    }
}

.autocomplete-items div {
padding: 10px;
cursor: pointer;
background-color: #fff; 
border-bottom: 1px solid #d4d4d4; 
}

/*when hovering an item:*/
.autocomplete-items div:hover {
background-color: #e9e9e9; 
}

/*when navigating through the items using the arrow keys:*/
.autocomplete-active {
background-color: DodgerBlue !important; 
color: #ffffff; 
}
.AssignmentExists {
    padding: 0.1em;
    height: 1.5em;
    width: 1.5em;
    border-radius: 15px;
    background-color:rgb(255, 208, 0);

}

.strikethrough{
    text-decoration: line-through;
    background-color: lightgray;
    border-radius: 8px;
}

input[type=checkbox]
{
  -webkit-appearance:checkbox;
}

#logout {

    height: 1.5em;
    widows: auto;
    cursor: pointer;
}

